<resources>
    <string name="app_name">Enrollment_Android</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="i_am_a_visitor">I am a visitor</string>
    <string name="i_am_visited_unit">I am a visited unit</string>
    <string name="role_changed">Role changed</string>
    <string name="please_input_your_name">Please input your name</string>
    <string name="name">Name</string>
    <string name="please_enter_your_phone_number">
        Please enter your phone number
    </string>
    <string name="tel">Tel</string>
    <string name="info">Info</string>
    <string name="please_fill_in_what_you_want_to_prefill">
        Please fill in what you want to pre-fill
    </string>
    <string name="fill_info_description">
        Fill in the information only for quick form filling,
        App will not access or distribute your personal information
    </string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="get_visited_unit_info">Get visited unit information</string>
    <string name="send_info">Send information</string>
    <string name="code">Code</string>
    <string name="form_url">Form url</string>
    <string name="select_qrcode_image">Please select a QRCode image</string>
    <string name="information">Information</string>
    <string name="web">Web</string>
    <string name="switch_role">Switch role</string>
    <string name="connect">Connect</string>
    <string name="please_input_passphrase">Please input passphrase</string>
    <string name="cancel">Cancel</string>
</resources>